Fix layout and some margins. Remove img border on mobile

--- a/templates/landing/one/css/style.css
+++ b/templates/landing/one/css/style.css
@@ -113,6 +113,17 @@ header p {
     }
 }
 
+.card-container {
+    max-width: 50em;
+    margin: 0 auto;
+}
+
+@media (min-width: 600px){ 
+    .card-container {
+        padding: 0 1em;
+    }
+}
+
 /**
  * card GRID
  */
@@ -122,10 +133,34 @@ header p {
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         grid-gap: 1em;
     }
+
+    @media (min-width: 800px){ 
+        .card-two {
+            grid-column: 2 / span 2;
+            justify-self: end;
+        }
+    
+        .card-three {
+            grid-row: 2;
+            grid-column: 3;
+        }
+    
+        .card-four {
+            grid-column: 1 / span 2;
+        }
 }
 
 img {
     border-radius: 8px;
+}
+
+@media (max-width: 600px){ 
+    .card-content {
+        padding: 0 1em;
+    }
+    img {
+        border-radius: 0;
+    }
 }
 
 .flex-col {
@@ -204,11 +239,28 @@ button {
 .bg-secondary {
     background: #0D47A1;
     color: #fff;
-
 }
 
 section {
     padding: 2em 0;
+}
+
+.bg-primary h2,
+.bg-primary section > p {
+    text-align: center;
+}
+
+.bg-primary h2,
+.bg-tertiary h3 {
+    margin-bottom: 0;
+}
+
+.bg-primary p {
+    margin-top: 0;
+}
+
+.bg-primary p {
+    margin-bottom: 4em;
 }
 
 
